# run-rust

./: Cargo.toml  LICENSE  README.md
src/: main.rs
test/: test.rs
